--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-external-links": "^2.1.0",
+    "rehype-img-size": "^1.0.1",
     "rehype-pretty-code": "^0.9.8",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
