--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "image-size": "^1.0.2",
     "lint-staged": "^13.2.2",
     "lucide-react": "^0.244.0",
     "next": "13.4.6",
@@ -49,7 +50,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-external-links": "^2.1.0",
-    "rehype-img-size": "^1.0.1",
     "rehype-pretty-code": "^0.9.8",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
