--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-photo-view": "^1.2.3",
     "rehype-external-links": "^2.1.0",
     "rehype-pretty-code": "^0.9.8",
     "remark-gfm": "^3.0.1",
