--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+    "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
