--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "contentlayer": "^0.3.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -55,6 +56,7 @@
     "rehype-pretty-code": "^0.9.8",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
+    "typed.js": "^2.0.16",
     "typescript": "5.1.3"
   },
   "browserslist": [
