--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
+    "color": "^4.2.3",
     "contentlayer": "^0.3.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
