--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/aos": "^3.0.4",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
     "contentlayer": "^0.3.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^8.8.0",
