--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
       "prettier --write"
     ]
   },
+  "overrides": {
+    "@opentelemetry/api": "1.4.1",
+    "@opentelemetry/core": "1.13.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "0.39.1",
+    "@opentelemetry/resources": "1.13.0",
+    "@opentelemetry/sdk-trace-base": "1.13.0",
+    "@opentelemetry/sdk-trace-node": "1.13.0",
+    "@opentelemetry/semantic-conventions": "1.13.0"
+  },
   "dependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
@@ -29,6 +38,7 @@
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/aos": "^3.0.4",
+    "@types/color": "^3.0.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
