--- a/package.json
+++ b/package.json
@@ -32,47 +32,47 @@
     "@opentelemetry/semantic-conventions": "1.13.0"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@giscus/react": "^2.3.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
-    "@svgr/webpack": "^8.0.1",
-    "@tailwindcss/typography": "^0.5.9",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/aos": "^3.0.4",
-    "@types/color": "^3.0.3",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@types/color": "^3.0.4",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "aos": "^2.3.4",
-    "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
+    "autoprefixer": "^10.4.15",
+    "clsx": "^2.0.0",
     "color": "^4.2.3",
     "contentlayer": "^0.3.3",
     "date-fns": "^2.30.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "image-size": "^1.0.2",
-    "lint-staged": "^13.2.2",
-    "lucide-react": "^0.244.0",
-    "next": "13.4.6",
+    "lint-staged": "^14.0.1",
+    "lucide-react": "^0.279.0",
+    "next": "^13.4.19",
     "next-contentlayer": "^0.3.3",
-    "next-sitemap": "^4.1.3",
-    "postcss": "8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "next-sitemap": "^4.2.3",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-photo-view": "^1.2.3",
-    "rehype-external-links": "^2.1.0",
-    "rehype-pretty-code": "^0.9.8",
+    "rehype-external-links": "^3.0.0",
+    "rehype-pretty-code": "^0.10.1",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.3",
     "typed.js": "^2.0.16",
-    "typescript": "5.1.3"
+    "typescript": "^5.2.2"
   },
   "browserslist": [
     "last 2 chrome version",
