--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zzz",
+  "name": "zero",
   "version": "1.0.0",
   "private": true,
   "description": "文心雕龙",
@@ -23,47 +23,50 @@
     ]
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "clsx": "^2.1.0",
+    "color": "^4.2.3",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
+    "image-size": "^1.1.1",
+    "lucide-react": "^0.356.0",
+    "next": "^13.4.19",
+    "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-photo-view": "^1.2.4",
+    "typed.js": "^2.1.0"
+  },
+  "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@contentlayer/source-files": "^0.3.4",
     "@giscus/react": "^2.3.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/aos": "^3.0.4",
-    "@types/color": "^3.0.4",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "aos": "^2.3.4",
-    "autoprefixer": "^10.4.15",
-    "clsx": "^2.0.0",
-    "color": "^4.2.3",
-    "contentlayer": "^0.3.3",
-    "date-fns": "^2.30.0",
+    "@types/color": "^3.0.6",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
-    "image-size": "^1.0.2",
-    "lint-staged": "^14.0.1",
-    "lucide-react": "^0.279.0",
-    "next": "^13.4.19",
-    "next-contentlayer": "^0.3.3",
-    "next-sitemap": "^4.2.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-photo-view": "^1.2.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "rehype-external-links": "^3.0.0",
-    "rehype-pretty-code": "^0.10.1",
-    "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.3.3",
-    "typed.js": "^2.0.16",
-    "typescript": "^5.2.2"
+    "rehype-pretty-code": "^0.13.0",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   },
   "browserslist": [
     "last 2 chrome version",
