--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^13.5.6",
     "next-contentlayer": "^0.3.4",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-photo-view": "^1.2.4",
@@ -60,6 +61,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.29",
+    "postcss-import": "^16.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "rehype-external-links": "^3.0.0",
