--- a/package.json
+++ b/package.json
@@ -24,51 +24,51 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "color": "^4.2.3",
     "contentlayer": "^0.3.4",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.6.0",
     "image-size": "^1.1.1",
-    "lucide-react": "^0.357.0",
-    "next": "^13.5.6",
+    "lucide-react": "^0.407.0",
+    "next": "^14.2.5",
     "next-contentlayer": "^0.3.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-photo-view": "^1.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-photo-view": "^1.2.6",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.1.0",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@contentlayer/source-files": "^0.3.4",
     "@giscus/react": "^2.3.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/aos": "^3.0.4",
     "@types/color": "^3.0.6",
-    "@types/node": "^20.11.27",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.18",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.29",
-    "postcss-import": "^16.0.1",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "rehype-external-links": "^3.0.0",
-    "rehype-pretty-code": "^0.10.1",
+    "rehype-pretty-code": "^0.13.2",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   },
   "browserslist": [
     "last 2 chrome version",
