--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "color": "^4.2.3",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.4.6",
     "date-fns": "^3.6.0",
     "image-size": "^1.1.1",
     "lucide-react": "^0.407.0",
     "next": "^14.2.5",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.4.6",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -42,8 +42,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@contentlayer/source-files": "^0.3.4",
-    "@giscus/react": "^2.3.0",
+    "@contentlayer2/source-files": "^0.4.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.13",
@@ -56,7 +55,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.49.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -66,7 +65,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.13.2",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
   },
