--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -55,7 +55,7 @@
     "eslint": "^8.49.0",
     "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.0.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
