--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "zero",
+  "name": "zzz",
   "version": "1.0.0",
   "private": true,
   "description": "文心雕龙",
-  "author": "蝉時雨 <me@chanshiyu.com>",
+  "author": "蝉時雨 <chanshiyucx@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -25,12 +25,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "color": "^4.2.3",
-    "contentlayer2": "^0.4.6",
     "date-fns": "^4.1.0",
     "image-size": "^1.1.1",
     "lucide-react": "^0.460.0",
-    "next": "^15.0.3",
-    "next-contentlayer2": "^0.4.6",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -41,35 +38,29 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
-    "@contentlayer2/source-files": "^0.4.3",
+    "@content-collections/core": "^0.7.3",
+    "@content-collections/mdx": "^0.2.0",
+    "@content-collections/next": "^0.2.4",
+    "@eslint/eslintrc": "^3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/color": "^4.2.0",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-config-next": "^15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
+    "next": "^15.0.3",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.14.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
-  },
-  "browserslist": [
-    "last 2 chrome version",
-    "last 2 firefox version",
-    "last 2 safari version"
-  ]
+  }
 }
