--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@phosphor-icons/react": "^2.1.7",
     "clsx": "^2.1.1",
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
     "image-size": "^1.1.1",
-    "lucide-react": "^0.460.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -46,7 +47,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.9.1",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.15.0",
@@ -57,12 +58,12 @@
     "next": "^15.0.3",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.14.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   }
 }
