--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.14.0",
     "remark-gfm": "^4.0.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.7.2"
   }
 }
