--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.7.2"
   }
