--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
     "image-size": "^1.1.1",
+    "kbar": "^0.1.0-beta.45",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
