chore: add rehype-slug

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-photo-view": "^1.2.6",
+    "rehype-slug": "^6.0.0",
     "typed.js": "^2.1.0",
     "zod": "^3.23.8"
   },
