--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.13.1",
+    "github-slugger": "^2.0.0",
     "image-size": "^1.1.1",
     "kbar": "^0.1.0-beta.45",
     "next-themes": "^0.4.3",
