--- a/package.json
+++ b/package.json
@@ -29,15 +29,23 @@
     "clsx": "^2.1.1",
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
+    "feed": "^4.2.2",
     "framer-motion": "^11.13.1",
     "github-slugger": "^2.0.0",
     "image-size": "^1.1.1",
     "kbar": "^0.1.0-beta.45",
+    "next": "^15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-photo-view": "^1.2.6",
+    "rehype-external-links": "^3.0.0",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-rehype": "^11.1.1",
     "typed.js": "^2.1.0",
     "zod": "^3.23.8"
   },
@@ -58,14 +66,10 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
-    "next": "^15.0.3",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
     "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "rehype-external-links": "^3.0.0",
-    "rehype-pretty-code": "^0.14.0",
-    "remark-gfm": "^4.0.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
