--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.1.0",
     "@phosphor-icons/react": "^2.1.7",
     "@t3-oss/env-nextjs": "^0.11.1",
     "clsx": "^2.1.1",
