--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "react-photo-view": "^1.2.6",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.1",
     "typed.js": "^2.1.0",
     "zod": "^3.24.1"
