--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     ]
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^15.1.4",
+    "@next/bundle-analyzer": "^15.1.6",
     "@phosphor-icons/react": "^2.1.7",
     "@t3-oss/env-nextjs": "^0.11.1",
     "clsx": "^2.1.1",
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
     "feed": "^4.2.2",
-    "framer-motion": "^11.17.0",
     "github-slugger": "^2.0.0",
     "image-size": "^1.2.0",
     "kbar": "^0.1.0-beta.45",
-    "next": "^15.1.4",
+    "motion": "^12.0.3",
+    "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -60,22 +60,21 @@
     "@content-collections/mdx": "^0.2.0",
     "@content-collections/next": "^0.2.4",
     "@eslint/eslintrc": "^3.2.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.4",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/node": "^22.10.10",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "postcss": "^8.4.49",
-    "postcss-import": "^16.1.0",
+    "lint-staged": "^15.4.2",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.7.3"
