--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   "dependencies": {
     "@next/bundle-analyzer": "^15.1.6",
     "@phosphor-icons/react": "^2.1.7",
-    "@t3-oss/env-nextjs": "^0.11.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "color": "^4.2.3",
     "date-fns": "^4.1.0",
     "feed": "^4.2.2",
     "github-slugger": "^2.0.0",
     "image-size": "^1.2.0",
-    "kbar": "^0.1.0-beta.45",
-    "motion": "^12.0.3",
+    "motion": "^12.0.6",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -61,22 +61,22 @@
     "@content-collections/next": "^0.2.4",
     "@eslint/eslintrc": "^3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
     "eslint-config-next": "^15.1.6",
     "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.2",
+    "lint-staged": "^15.4.3",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animated": "^1.1.2",
+    "tailwindcss-animated": "^2.0.0",
     "typescript": "^5.7.3"
   }
 }
