fix: rename config setting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "蝉時雨 <chanshiyucx@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
