--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "feed": "^5.1.0",
     "github-slugger": "^2.0.0",
     "image-size": "^2.0.2",
+    "katex": "^0.16.22",
     "motion": "^12.18.1",
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
