--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "typed.js": "^2.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
