--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "image-size": "^2.0.2",
     "katex": "^0.16.22",
     "motion": "^12.23.6",
+    "music-metadata": "^11.7.1",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
