--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "蝉時雨 <chanshiyucx@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "analyze": "ANALYZE=true npm run build",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -32,10 +33,10 @@
     "color": "^5.0.0",
     "date-fns": "^4.1.0",
     "feed": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "github-slugger": "^2.0.0",
     "image-size": "^2.0.2",
     "katex": "^0.16.22",
-    "motion": "^12.23.12",
     "music-metadata": "^11.7.3",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
