--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "feed": "^5.1.0",
     "framer-motion": "^12.23.12",
     "github-slugger": "^2.0.0",
+    "id3-parser": "^3.0.0",
     "image-size": "^2.0.2",
     "katex": "^0.16.22",
-    "music-metadata": "^11.7.3",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
