--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-type-animation": "^3.2.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
@@ -52,7 +53,6 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
-    "typed.js": "^2.1.0",
     "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
