--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "zero",
   "version": "2.0.0",
   "private": true,
-  "description": "文心雕龙",
-  "author": "蝉時雨 <chanshiyucx@gmail.com>",
+  "description": "My corner of internet, Personal Homepage.",
+  "author": "Shiyu <chanshiyucx@gmail.com>",
   "license": "MIT",
   "scripts": {
     "analyze": "ANALYZE=true npm run build",
@@ -12,8 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "predev": "node syncBlog.js",
-    "prebuild": "node syncBlog.js",
+    "predev": "tsx syncBlog.ts",
+    "prebuild": "tsx syncBlog.ts",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -84,6 +84,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "engines": {
