chore: npm to pnpm

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "My corner of internet, Personal Homepage.",
   "author": "Shiyu <chanshiyucx@gmail.com>",
   "license": "MIT",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
-    "analyze": "ANALYZE=true npm run build",
+    "analyze": "ANALYZE=true pnpm run build",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -34,10 +35,13 @@
     "feed": "^5.1.0",
     "framer-motion": "^12.23.12",
     "github-slugger": "^2.0.0",
+    "hast": "^1.0.0",
+    "hast-util-to-string": "^3.0.1",
     "id3-parser": "^3.0.0",
     "image-size": "^2.0.2",
     "katex": "^0.16.22",
-    "next": "^15.4.5",
+    "mdast-util-mdx": "^3.0.0",
+    "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -53,7 +57,9 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.14",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -62,23 +68,23 @@
     "@content-collections/core": "^0.10.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
-    "@eslint/js": "^9.32.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
-    "@next/bundle-analyzer": "^15.4.5",
-    "@next/eslint-plugin-next": "^15.4.5",
+    "@eslint/js": "^9.33.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.6.2",
+    "@next/bundle-analyzer": "^15.4.6",
+    "@next/eslint-plugin-next": "^15.4.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24.2.0",
-    "@types/react": "^19.1.9",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "eslint": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
+    "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.4",
+    "lint-staged": "^16.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
