chore: add remark-parse

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "feed": "^5.1.0",
     "framer-motion": "^12.23.12",
     "github-slugger": "^2.0.0",
-    "hast": "^1.0.0",
     "hast-util-to-string": "^3.0.1",
     "id3-parser": "^3.0.0",
     "image-size": "^2.0.2",
@@ -55,6 +54,7 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
     "unified": "^11.0.5",
@@ -74,6 +74,7 @@
     "@next/eslint-plugin-next": "^15.4.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/hast": "^3.0.4",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
