--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "analyze": "ANALYZE=true pnpm run build",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && tsx scripts/generate-meta.ts",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "predev": "tsx syncBlog.ts",
-    "prebuild": "tsx syncBlog.ts",
+    "predev": "tsx scripts/sync-blog.ts",
+    "prebuild": "tsx scripts/sync-blog.ts",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -32,33 +32,15 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "feed": "^5.1.0",
     "framer-motion": "^12.23.12",
-    "github-slugger": "^2.0.0",
-    "hast-util-to-string": "^3.0.1",
     "id3-parser": "^3.0.0",
-    "image-size": "^2.0.2",
     "katex": "^0.16.22",
-    "mdast-util-mdx": "^3.0.0",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-type-animation": "^3.2.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-external-links": "^3.0.0",
-    "rehype-katex": "^7.0.1",
-    "rehype-pretty-code": "^0.14.1",
-    "rehype-slug": "^6.0.0",
-    "rehype-stringify": "^10.0.1",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
-    "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
@@ -83,16 +65,34 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "feed": "^5.1.0",
+    "github-slugger": "^2.0.0",
     "globals": "^16.3.0",
+    "hast-util-to-string": "^3.0.1",
     "husky": "^9.1.7",
+    "image-size": "^2.0.2",
     "lint-staged": "^16.1.5",
+    "mdast-util-mdx": "^3.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
