--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/hast": "^3.0.4",
     "@types/node": "^24.2.1",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
@@ -73,6 +74,7 @@
     "image-size": "^2.0.2",
     "lint-staged": "^16.1.5",
     "mdast-util-mdx": "^3.0.0",
+    "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
