--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
     "id3-parser": "^3.0.0",
     "katex": "^0.16.22",
