--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev --turbopack",
     "build": "next build && tsx scripts/generate-meta.ts",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "lint:fix": "next lint --fix",
     "predev": "tsx scripts/sync-blog.ts",
     "prebuild": "tsx scripts/sync-blog.ts",
@@ -29,55 +29,56 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.18",
-    "framer-motion": "^12.23.24",
+    "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.26",
     "id3-parser": "^3.0.0",
-    "katex": "^0.16.25",
-    "next": "^15.5.4",
+    "katex": "^0.16.27",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@content-collections/core": "^0.10.0",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "@content-collections/core": "^0.12.0",
     "@content-collections/mdx": "^0.2.2",
-    "@content-collections/next": "^0.2.7",
-    "@eslint/js": "^9.37.0",
+    "@content-collections/next": "^0.2.9",
+    "@eslint/js": "^9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@next/bundle-analyzer": "^15.5.4",
-    "@next/eslint-plugin-next": "^15.5.4",
-    "@tailwindcss/postcss": "^4.1.14",
+    "@next/bundle-analyzer": "^16.0.10",
+    "@next/eslint-plugin-next": "^16.0.10",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@types/hast": "^3.0.4",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.10.4",
     "@types/pngjs": "^6.0.5",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.0",
-    "@typescript-eslint/parser": "^8.46.0",
-    "eslint": "^9.37.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "feed": "^5.1.0",
     "github-slugger": "^2.0.0",
-    "globals": "^16.4.0",
+    "globals": "^16.5.0",
     "hast-util-to-string": "^3.0.1",
     "husky": "^9.1.7",
     "image-size": "^2.0.2",
-    "lint-staged": "^16.2.4",
+    "lint-staged": "^16.2.7",
     "mdast-util-mdx": "^3.0.0",
     "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "postcss-load-config": "^6.0.1",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
@@ -89,15 +90,16 @@
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   },
   "browserslist": [
     "last 2 chrome versions",
