feat: optimize MDX processing configuration

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^24.10.4",
-    "@types/pngjs": "^6.0.5",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
@@ -77,7 +77,6 @@
     "image-size": "^2.0.2",
     "lint-staged": "^16.2.7",
     "mdast-util-mdx": "^3.0.0",
-    "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.7.4",
