--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
+    "es-toolkit": "^1.44.0",
     "framer-motion": "^12.29.2",
     "id3-parser": "^3.0.0",
     "katex": "^0.16.28",
@@ -63,9 +64,11 @@
     "@types/node": "^24.10.9",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "feed": "^5.2.0",
     "github-slugger": "^2.0.0",
